manifests/test/store-web-app-http-proxy-store.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: store-web-app-store
  namespace: ambassador-test
spec:
  virtualhost:
    fqdn: store.ambassadors.ink
    tls:
      secretName: store-ambassador-tls
  routes:
    - conditions:
      - prefix: /
      services:
        - name: store-web-app
          port: 80
