manifests/test/store-web-app-http-proxy.yaml
# apiVersion: projectcontour.io/v1
# kind: HTTPProxy
# metadata:
#   name: store-web-app-www
#   namespace: ambassador-test
# spec:
#   virtualhost:
#     fqdn: ambassadors.ink
#   routes:
#     - conditions:
#       - prefix: /
#       services:
#         - name: store-web-app
#           port: 80
