manifests/test/store-web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app: store-web-app
  name: store-web-app
  namespace: ambassador-test
spec:
  rules:
  - host: www.ambassadors.ink
    http:
      paths:
      - backend:
          service:
            name: store-web-app
            port:
              number: 80
        path: /(?!core|auth|users)(.*)
        pathType: ImplementationSpecific
  - host: ambassadors.ink
    http:
      paths:
      - backend:
          service:
            name: store-web-app
            port:
              number: 80
        path: /(?!core|auth|users)(.*)
        pathType: ImplementationSpecific
  - host: store.ambassadors.ink
    http:
      paths:
      - backend:
          service:
            name: store-web-app
            port:
              number: 80
        path: /(?!core|auth|users)(.*)
        pathType: ImplementationSpecific
