manifests/test/store-web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: store-web-app
  name: store-web-app
  namespace: ambassador-test
spec:
  selector:
    app: store-web-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
